--- a/.github/workflows/automatic-release.yml
+++ b/.github/workflows/automatic-release.yml
@@ -6,6 +6,9 @@ on:
       - 'v*.*.*'
   workflow_dispatch:
 
+env:
+  USE_HARD_LINKS: false
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -29,7 +32,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       
       - name: Install root dependecies
-        run: npm i
+        run: npm ci
 
       - name: Lerna bootstrap (install packages dependecies)
         run: npx lerna bootstrap
@@ -74,7 +77,7 @@ jobs:
           node-version: '18.x'
       
       - name: Install root dependencies
-        run: npm i
+        run: npm ci
 
       - name: Install desktop dependencies
         run: npm run install:desktop
