--- a/package.json
+++ b/package.json
@@ -150,6 +150,15 @@
       "benchmark/**/*"
     ]
   },
+  "nodeBrowserSkel": {
+    "badges": {
+      "workflow": true,
+      "coveralls": false
+    },
+    "git": {
+      "branch": "public"
+    }
+  },
   "devDependencies": {
     "@i3m/non-repudiation-protocol-smart-contract": "^1.0.1",
     "@i3m/server-wallet": "^2.5.8",
