--- a/packages/cloud-vault-server/package.json
+++ b/packages/cloud-vault-server/package.json
@@ -106,6 +106,7 @@
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/pg": "^8.6.6",
+    "@types/prompt-sync": "^4.2.0",
     "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
@@ -117,6 +118,7 @@
     "nodemon": "^2.0.20",
     "npm": "^9.3.1",
     "openapi-types": "^12.1.0",
+    "prompt-sync": "^4.2.0",
     "rimraf": "^4.1.0",
     "ts-node": "^10.9.1",
     "ts-standard": "^12.0.2",
