--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -10,11 +10,11 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
+      - name: Login to GitLab docker registry
         uses: docker/login-action@v2
         with:
           registry: 'registry.gitlab.com'
-          username: ${{ secrets.GITLAB_REGISTRY_USERNAME }}
+          username: ${{ secrets.GITLAB_REGISTRY_USER }}
           password: ${{ secrets.GITLAB_REGISTRY_TOKEN }}
       
       - name: get-npm-version
