--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -32,4 +32,4 @@ jobs:
       
       - name: Ansible deploy
         run: |
-          curl --request POST --header "Authorization: Bearer ${{ secrets.ANSIBLE_DEPLOY_TOKEN }}" "{{ secrets.ANSIBLE_DEPLOY_URL }}"
+          curl --request POST --header "Authorization: Bearer ${{ secrets.ANSIBLE_DEPLOY_TOKEN }}" "${{ secrets.ANSIBLE_DEPLOY_URL }}"
