--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           context: ./packages/cloud-vault-server/docker
           push: true
+          build-args: VERSION=${{ steps.package-version.outputs.current-version}}
           tags: registry.gitlab.com/i3-market/code/wp3/t3.2/i3m-wallet-monorepo/cvs:${{ steps.package-version.outputs.current-version}},registry.gitlab.com/i3-market/code/wp3/t3.2/i3m-wallet-monorepo/cvs:latest
       
       - name: Ansible deploy
