.env templates better documented

--- a/packages/cloud-vault-server/.env.template
+++ b/packages/cloud-vault-server/.env.template
@@ -41,7 +41,7 @@ JWT_EXPIRES_IN=7862400
 # ```json
 # {
 #    "application_type": "web",
-#    "redirect_uris": [<SERVER_PUBLIC_URL>/oidc/cb"],
+#    "redirect_uris": [<SERVER_PUBLIC_URL>/api/v<NPM PKG MAJOR VERSION>/registration/cb"],
 #    "client_name": "CVS <SERVER_ID>",
 #    "grant_types": [ "authorization_code" ],
 #    "response_types": [ "code" ],
