--- a/packages/cloud-vault-server/docker/cvs.env.template
+++ b/packages/cloud-vault-server/docker/cvs.env.template
@@ -28,7 +28,7 @@ JWT_EXPIRES_IN=
 # ```json
 # {
 #    "application_type": "web",
-#    "redirect_uris": [<SERVER_PUBLIC_URL>/api/v2/registration/cb"],
+#    "redirect_uris": [<SERVER_PUBLIC_URL>/api/v<NPM PKG MAJOR VERSION>/registration/cb"],
 #    "client_name": "CVS <SERVER_ID>",
 #    "grant_types": [ "authorization_code" ],
 #    "response_types": [ "code" ],
