--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -90,6 +90,7 @@
     "@i3m/wallet-protocol": "^2.5.10",
     "@i3m/wallet-protocol-utils": "^2.5.10",
     "argparse": "^2.0.1",
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
