--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -138,6 +138,7 @@
     "@types/lodash": "^4.14.194",
     "@types/mocha": "^10.0.0",
     "@types/uuid": "^9.0.1",
+    "@types/write-file-atomic": "^4.0.0",
     "c8": "^7.12.0",
     "chai": "^4.3.3",
     "dotenv": "^16.0.3",
@@ -179,6 +180,7 @@
     "object-sha": "^2.1.1",
     "rxjs": "^7.8.0",
     "uuid": "^8.3.2",
-    "web-did-resolver": "^2.0.4"
+    "web-did-resolver": "^2.0.4",
+    "write-file-atomic": "^5.0.1"
   }
 }
