--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -85,6 +85,7 @@
     "@i3m/base-wallet": "^2.5.11",
     "@i3m/bok-wallet": "^2.5.11",
     "@i3m/cloud-vault-client": "^2.5.12",
+    "@i3m/non-repudiation-library": "^2.6.4",
     "@i3m/sw-wallet": "^2.5.11",
     "@i3m/wallet-desktop-openapi": "^2.5.11",
     "@i3m/wallet-protocol": "^2.5.11",
