--- a/.github/workflows/manual-packing-mac.yml
+++ b/.github/workflows/manual-packing-mac.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 18
       
       - name: Install root dependencies
-        run: npm ci
+        run: npm i
 
       - name: Install desktop dependencies
         run: npm run install:desktop
